--- a/templates/jsn_blank2/scss/custom/_button.scss
+++ b/templates/jsn_blank2/scss/custom/_button.scss
@@ -17,7 +17,7 @@
     touch-action: manipulation;
     cursor: pointer;
     background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-    border: 1px solid transparent;
+    border: 1px solid transparent !important;
     white-space: nowrap;
     @include button-size($padding-base-vertical, $padding-base-horizontal, $font-size-small, $line-height-base, $btn-border-radius-small);
 
@@ -61,12 +61,44 @@
         background-color: rgba($btn-default-color, 0.1);
         border: solid 1px rgba($btn-default-color, 0.2);
     }
+
+
   }
 
   @each $color, $value in $theme-colors {
     .btn-gradient-#{ $color } {
         //   background-image: radial-gradient(circle at 0 0, lighten($value,8%), $value);
         background-image: radial-gradient(circle at 0 0,lighten($value, 10%),$value);
+        transition: all .3s;
+
+
+        &:hover,
+        &:active {
+        background-image: radial-gradient(circle at 0 0,lighten($value, 15%),$value),
+        linear-gradient(rgba($btn-default-color, 0.15), rgba($btn-default-color, 0.15));
+        box-shadow: 0 0 0 2px rgba($value, 0.5);
+
+
+        transition: all .3s;
+
+        }
+
+        &:focus {
+         box-shadow: 0 0 0 3px rgba($value, 0.5) !important;
+
+        }
     }
 }
+
+.btn-lg {
+    // line-height: ensure even-numbered height of button next to large input
+    @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-small, $line-height-large, $btn-border-radius-base);
+  }
+  .btn-sm {
+    // line-height: ensure proper height of button next to small input
+    @include button-size($padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $btn-border-radius-small);
+  }
+  .btn-xs {
+    @include button-size($padding-xs-vertical, $padding-xs-horizontal, $font-size-small, $line-height-small, $btn-border-radius-small);
+  }
 
