--- a/templates/jsn_blank2/scss/custom/_custom.scss
+++ b/templates/jsn_blank2/scss/custom/_custom.scss
@@ -74,6 +74,8 @@ $theme-colors: map-merge((
 
 $padding-base-vertical:     13px ;
 $padding-base-horizontal:   30px ;
+$padding-large-vertical:    18px ;
+$padding-large-horizontal:  56px ;
 $btn-font-weight: bold;
 $btn-default-color:              #fff ;
 $btn-text-transform: uppercase;
