--- a/templates/jsn_blank2/scss/custom/_customvariables.scss
+++ b/templates/jsn_blank2/scss/custom/_customvariables.scss
@@ -113,8 +113,8 @@ $brand-color: $brand-warning !default;
 // $padding-base-vertical:     6px !default;
 // $padding-base-horizontal:   12px !default;
 
-$padding-large-vertical:    15px !default;
-$padding-large-horizontal:  30px !default;
+// $padding-large-vertical:    15px !default;
+// $padding-large-horizontal:  30px !default;
 
 $padding-small-vertical:    5px !default;
 $padding-small-horizontal:  10px !default;
