--- a/templates/jsn_blank2/css/core/general_1c383cd30b7c298ab50293adfecb7b18.css
+++ b/templates/jsn_blank2/css/core/general_1c383cd30b7c298ab50293adfecb7b18.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #4b4545;
+  background-color: #fff;
   color: #394a5c;
   font-family: Roboto;
   font-weight: normal;
@@ -7,47 +7,48 @@ body {
   line-height: 1.5;
 }
 a {
-  color: #00a0ff;
+  color: #f76b1c;
 }
 a:hover, a:focus {
   color: #394a5c;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: Open Sans;
+  font-family: Roboto;
   font-weight: 700;
   line-height: 1.5;
   color: #394a5c;
   letter-spacing: 0px;
 }
 h1, .h1 {
-  font-size: 41px;
+  font-size: 36px;
 }
 h2, .h2 {
-  font-size: 34px;
+  font-size: 30px;
 }
 h3, .h3 {
-  font-size: 28px;
+  font-size: 24px;
 }
 h4, .h4 {
-  font-size: 20px;
+  font-size: 18px;
 }
 h5, .h5 {
-  font-size: 16px;
+  font-size: 14px;
 }
 h6, .h6 {
-  font-size: 14px;
+  font-size: 12px;
 }
 .btn-default {
   border-width: 0px;
-  border-color: #47bbff;
+  border-color: #fa9348;
 }
 .btn-default {
   background: #717f8e;
-  font-size: 14px;
+  font-size: 12px;
   color: #fff;
   letter-spacing: 0px;
-  -webkit-box-shadow: 0px 0px 0px 0px #47bbff;
-  box-shadow: 0px 0px 0px 0px #47bbff;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 0px 0px 0px #fa9348;
+  box-shadow: 0px 0px 0px 0px #fa9348;
 }
 .btn-default:hover, .btn-default:focus {
   color: #fff;
@@ -57,41 +58,42 @@ h6, .h6 {
 }
 .btn-primary {
   border-width: 0px;
-  border-color: #47bbff;
+  border-color: #fa9348;
 }
 .btn-primary {
-  background: #00a0ff;
+  background: #f76b1c;
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   letter-spacing: 0px;
-  -webkit-box-shadow: 0px 0px 0px 0px #47bbff;
-  box-shadow: 0px 0px 0px 0px #47bbff;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 0px 0px 0px #fa9348;
+  box-shadow: 0px 0px 0px 0px #fa9348;
 }
 .btn-primary:hover, .btn-primary:focus {
   color: #fff;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary.active {
-  background-color: #47bbff;
+  background-color: #fa9348;
 }
 .btn-primary, .btn-default {
-  border-top-left-radius: 0px;
-  -webkit-border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
-  -webkit-border-bottom-left-radius: 0px;
-  border-top-right-radius: 0px;
-  -webkit-border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  -webkit-border-bottom-right-radius: 0px;
+  border-top-left-radius: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  border-top-right-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
 }
 .btn-primary, .btn-default {
-  padding-top: 15px;
+  padding-top: 18px;
 }
 .btn-primary, .btn-default {
-  padding-right: 30px;
+  padding-right: 56px;
 }
 .btn-primary, .btn-default {
-  padding-bottom: 15px;
+  padding-bottom: 18px;
 }
 .btn-primary, .btn-default {
-  padding-left: 30px;
+  padding-left: 56px;
 }
