--- a/templates/jsn_blank2/css/core/modules_1c383cd30b7c298ab50293adfecb7b18.css
+++ b/templates/jsn_blank2/css/core/modules_1c383cd30b7c298ab50293adfecb7b18.css
@@ -1,62 +1,62 @@
 body#sunfw-master .module-style-1 {
-  background: #47bbff;
+  background: #fa9348;
 }
 body#sunfw-master .module-style-1 .module-title .box-title {
-  background: #47bbff;
+  background: #fa9348;
   font-size: 14px;
-  color: #47bbff;
+  color: #fa9348;
   font-weight: normal;
 }
 body#sunfw-master .module-style-1 .module-title .box-title:before, body#sunfw-master .module-style-1 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-1 .module-body, body#sunfw-master .module-style-1 .custom {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-2 {
-  background: #47bbff;
+  background: #fa9348;
 }
 body#sunfw-master .module-style-2 .module-title .box-title {
-  background: #47bbff;
+  background: #fa9348;
   font-size: 14px;
-  color: #47bbff;
+  color: #fa9348;
   font-weight: normal;
 }
 body#sunfw-master .module-style-2 .module-title .box-title:before, body#sunfw-master .module-style-2 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-2 .module-body, body#sunfw-master .module-style-2 .custom {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-3 {
-  background: #47bbff;
+  background: #fa9348;
 }
 body#sunfw-master .module-style-3 .module-title .box-title {
-  background: #47bbff;
+  background: #fa9348;
   font-size: 14px;
-  color: #47bbff;
+  color: #fa9348;
   font-weight: normal;
 }
 body#sunfw-master .module-style-3 .module-title .box-title:before, body#sunfw-master .module-style-3 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-3 .module-body, body#sunfw-master .module-style-3 .custom {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-4 {
-  background: #47bbff;
+  background: #fa9348;
 }
 body#sunfw-master .module-style-4 .module-title .box-title {
-  background: #47bbff;
+  background: #fa9348;
   font-size: 14px;
-  color: #47bbff;
+  color: #fa9348;
   font-weight: normal;
 }
 body#sunfw-master .module-style-4 .module-title .box-title:before, body#sunfw-master .module-style-4 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .module-style-4 .module-body, body#sunfw-master .module-style-4 .custom {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .richbox-1 {
   background: custom;
@@ -71,7 +71,7 @@ body#sunfw-master .richbox-1 .module-title .box-title {
   font-weight: bold;
 }
 body#sunfw-master .richbox-1 .module-title .box-title:before, body#sunfw-master .richbox-1 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .richbox-2 {
   background: custom;
@@ -80,13 +80,13 @@ body#sunfw-master .richbox-2 {
   border-color: #d1d6de;
 }
 body#sunfw-master .richbox-2 .module-title .box-title {
-  background: #00a0ff;
+  background: #f76b1c;
   font-size: 19px;
   color: #fff;
   font-weight: bold;
 }
 body#sunfw-master .richbox-2 .module-title .box-title:before, body#sunfw-master .richbox-2 .module-title .box-title i[class*='fa-'] {
-  color: #47bbff;
+  color: #fa9348;
 }
 body#sunfw-master .lightbox-1 {
   background: custom;
