--- a/templates/jsn_blank2/css/template.css
+++ b/templates/jsn_blank2/css/template.css
@@ -17,9 +17,9 @@
   border: 1px solid transparent !important;
   white-space: nowrap;
   padding: 13px 30px !important;
-  font-size: 12px;
+  font-size: 12px !important;
   line-height: 1.42857;
-  border-radius: 3px;
+  border-radius: 3px !important;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -32,7 +32,7 @@
 }
 
 .btn:hover, .btn:focus, .btn.focus {
-  color: #fff;
+  color: #212529;
   text-decoration: none;
 }
 
@@ -57,125 +57,335 @@ fieldset[disabled] .btn {
   border: solid 1px rgba(255, 255, 255, 0.2);
 }
 
-.btn-gradient-primary {
-  background-image: radial-gradient(circle at 0 0, #f98b4d, #f76b1c);
+.btn-primary {
+  background-image: radial-gradient(circle at 0 0, #f98b4d, #f76b1c) !important;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
 
-.btn-gradient-primary:hover, .btn-gradient-primary:active {
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus {
+  color: #fff !important;
   background-image: radial-gradient(circle at 0 0, #fa9b66, #f76b1c), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
   background-image: radial-gradient(circle at 0 0, #fa9b66, #f76b1c), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
   -webkit-box-shadow: 0 0 0 2px rgba(247, 107, 28, 0.5);
-  box-shadow: 0 0 0 3px rgba(247, 107, 28, 0.5);
-  -webkit-transition: all .3s;
-  transition: all .3s;
+          box-shadow: 0 0 0 2px rgba(247, 107, 28, 0.5);
 }
 
-.btn-gradient-primary:focus {
+.btn-primary:focus {
   -webkit-box-shadow: 0 0 0 3px rgba(247, 107, 28, 0.5) !important;
           box-shadow: 0 0 0 3px rgba(247, 107, 28, 0.5) !important;
 }
 
-.btn-gradient-success {
-  background-image: radial-gradient(circle at 0 0, #96ce4e, #7db633);
+.btn.btn-outline-primary {
+  border: 1px solid #f76b1c !important;
+  background: none;
+}
+
+.btn.btn-outline-primary:hover, .btn.btn-outline-primary:focus, .btn.btn-outline-primary.focus {
+  background: #f76b1c;
+  color: #fff !important;
+}
+
+.btn.btn-plain-primary {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-primary:hover, .btn.btn-plain-primary:focus, .btn.btn-plain-primary.focus {
+  color: #f76b1c !important;
+}
+
+.btn-success {
+  background-image: radial-gradient(circle at 0 0, #96ce4e, #7db633) !important;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
 
-.btn-gradient-success:hover, .btn-gradient-success:active {
+.btn-success:hover, .btn-success:focus, .btn-success.focus {
+  color: #212529 !important;
   background-image: radial-gradient(circle at 0 0, #a2d362, #7db633), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
   background-image: radial-gradient(circle at 0 0, #a2d362, #7db633), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
   -webkit-box-shadow: 0 0 0 2px rgba(125, 182, 51, 0.5);
           box-shadow: 0 0 0 2px rgba(125, 182, 51, 0.5);
-  -webkit-transition: all .3s;
-  transition: all .3s;
 }
 
-.btn-gradient-success:focus {
+.btn-success:focus {
   -webkit-box-shadow: 0 0 0 3px rgba(125, 182, 51, 0.5) !important;
           box-shadow: 0 0 0 3px rgba(125, 182, 51, 0.5) !important;
 }
 
-.btn-gradient-info {
-  background-image: radial-gradient(circle at 0 0, #5880f4, #285bf1);
+.btn.btn-outline-success {
+  border: 1px solid #7db633 !important;
+  background: none;
+}
+
+.btn.btn-outline-success:hover, .btn.btn-outline-success:focus, .btn.btn-outline-success.focus {
+  background: #7db633;
+  color: #212529 !important;
+}
+
+.btn.btn-plain-success {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-success:hover, .btn.btn-plain-success:focus, .btn.btn-plain-success.focus {
+  color: #7db633 !important;
+}
+
+.btn-info {
+  background-image: radial-gradient(circle at 0 0, #5880f4, #285bf1) !important;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
 
-.btn-gradient-info:hover, .btn-gradient-info:active {
+.btn-info:hover, .btn-info:focus, .btn-info.focus {
+  color: #fff !important;
   background-image: radial-gradient(circle at 0 0, #7092f6, #285bf1), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
   background-image: radial-gradient(circle at 0 0, #7092f6, #285bf1), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
   -webkit-box-shadow: 0 0 0 2px rgba(40, 91, 241, 0.5);
           box-shadow: 0 0 0 2px rgba(40, 91, 241, 0.5);
-  -webkit-transition: all .3s;
-  transition: all .3s;
 }
 
-.btn-gradient-info:focus {
+.btn-info:focus {
   -webkit-box-shadow: 0 0 0 3px rgba(40, 91, 241, 0.5) !important;
           box-shadow: 0 0 0 3px rgba(40, 91, 241, 0.5) !important;
 }
 
-.btn-gradient-warning {
-  background-image: radial-gradient(circle at 0 0, #ffd54b, #ffc918);
+.btn.btn-outline-info {
+  border: 1px solid #285bf1 !important;
+  background: none;
+}
+
+.btn.btn-outline-info:hover, .btn.btn-outline-info:focus, .btn.btn-outline-info.focus {
+  background: #285bf1;
+  color: #fff !important;
+}
+
+.btn.btn-plain-info {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-info:hover, .btn.btn-plain-info:focus, .btn.btn-plain-info.focus {
+  color: #285bf1 !important;
+}
+
+.btn-warning {
+  background-image: radial-gradient(circle at 0 0, #ffd54b, #ffc918) !important;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
 
-.btn-gradient-warning:hover, .btn-gradient-warning:active {
+.btn-warning:hover, .btn-warning:focus, .btn-warning.focus {
+  color: #212529 !important;
   background-image: radial-gradient(circle at 0 0, #ffdb65, #ffc918), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
   background-image: radial-gradient(circle at 0 0, #ffdb65, #ffc918), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
   -webkit-box-shadow: 0 0 0 2px rgba(255, 201, 24, 0.5);
           box-shadow: 0 0 0 2px rgba(255, 201, 24, 0.5);
-  -webkit-transition: all .3s;
-  transition: all .3s;
 }
 
-.btn-gradient-warning:focus {
+.btn-warning:focus {
   -webkit-box-shadow: 0 0 0 3px rgba(255, 201, 24, 0.5) !important;
           box-shadow: 0 0 0 3px rgba(255, 201, 24, 0.5) !important;
 }
 
-.btn-gradient-danger {
-  background-image: radial-gradient(circle at 0 0, #ee4b4b, #e91d1d);
+.btn.btn-outline-warning {
+  border: 1px solid #ffc918 !important;
+  background: none;
+}
+
+.btn.btn-outline-warning:hover, .btn.btn-outline-warning:focus, .btn.btn-outline-warning.focus {
+  background: #ffc918;
+  color: #212529 !important;
+}
+
+.btn.btn-plain-warning {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-warning:hover, .btn.btn-plain-warning:focus, .btn.btn-plain-warning.focus {
+  color: #ffc918 !important;
+}
+
+.btn-danger {
+  background-image: radial-gradient(circle at 0 0, #ee4b4b, #e91d1d) !important;
   -webkit-transition: all .3s;
   transition: all .3s;
 }
 
-.btn-gradient-danger:hover, .btn-gradient-danger:active {
+.btn-danger:hover, .btn-danger:focus, .btn-danger.focus {
+  color: #fff !important;
   background-image: radial-gradient(circle at 0 0, #f06363, #e91d1d), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
   background-image: radial-gradient(circle at 0 0, #f06363, #e91d1d), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
   -webkit-box-shadow: 0 0 0 2px rgba(233, 29, 29, 0.5);
           box-shadow: 0 0 0 2px rgba(233, 29, 29, 0.5);
-  -webkit-transition: all .3s;
-  transition: all .3s;
 }
 
-.btn-gradient-danger:focus {
+.btn-danger:focus {
   -webkit-box-shadow: 0 0 0 3px rgba(233, 29, 29, 0.5) !important;
           box-shadow: 0 0 0 3px rgba(233, 29, 29, 0.5) !important;
 }
 
+.btn.btn-outline-danger {
+  border: 1px solid #e91d1d !important;
+  background: none;
+}
+
+.btn.btn-outline-danger:hover, .btn.btn-outline-danger:focus, .btn.btn-outline-danger.focus {
+  background: #e91d1d;
+  color: #fff !important;
+}
+
+.btn.btn-plain-danger {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-danger:hover, .btn.btn-plain-danger:focus, .btn.btn-plain-danger.focus {
+  color: #e91d1d !important;
+}
+
+.btn-light {
+  background-image: radial-gradient(circle at 0 0, white, #fff) !important;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.btn-light:hover, .btn-light:focus, .btn-light.focus {
+  color: #212529 !important;
+  background-image: radial-gradient(circle at 0 0, white, #fff), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0.15)));
+  background-image: radial-gradient(circle at 0 0, white, #fff), linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15));
+  -webkit-box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
+}
+
+.btn-light:focus {
+  -webkit-box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.5) !important;
+          box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.5) !important;
+}
+
+.btn.btn-outline-light {
+  border: 1px solid #fff !important;
+  background: none;
+}
+
+.btn.btn-outline-light:hover, .btn.btn-outline-light:focus, .btn.btn-outline-light.focus {
+  background: #fff;
+  color: #212529 !important;
+}
+
+.btn.btn-plain-light {
+  color: #212529 !important;
+  background: none !important;
+}
+
+.btn.btn-plain-light:hover, .btn.btn-plain-light:focus, .btn.btn-plain-light.focus {
+  color: #fff !important;
+}
+
 .btn-lg {
   padding: 18px 56px !important;
-  font-size: 12px;
+  font-size: 12px !important;
   line-height: 1.33333;
-  border-radius: 4px;
+  border-radius: 3px !important;
 }
 
 .btn-sm {
-  padding: 5px 10px !important;
-  font-size: 12px;
+  padding: 13px 13px !important;
+  font-size: 12px !important;
   line-height: 1.5;
-  border-radius: 3px;
+  border-radius: 3px !important;
 }
 
 .btn-xs {
   padding: 1px 5px !important;
-  font-size: 12px;
+  font-size: 12px !important;
   line-height: 1.5;
-  border-radius: 3px;
+  border-radius: 3px !important;
+}
+
+.sectitle {
+  display: inline-block;
+}
+
+.sectitle p.sectitle__sub {
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: -3px;
+}
+
+.sectitle h3.sectitle__title {
+  font-size: 36px;
+  line-height: 1.5;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.sectitle p.sectitle__sub,
+.sectitle h3.sectitle__title {
+  color: #243341;
+}
+
+.sectitle--center {
+  text-align: center;
+}
+
+.sectitle--center::after {
+  margin: 0 auto;
+}
+
+.sectitle--lg h3.sectitle__title span {
+  font-weight: bold;
+  color: #fff;
+}
+
+.sectitle--lg::after {
+  margin-top: 3px !important;
+}
+
+.sectitle:after {
+  content: '';
+  display: block;
+  width: 55px;
+  height: 2px;
+  background-image: radial-gradient(circle at 0 0, #fa9348, #f76b1c);
+  margin-top: 10px;
+}
+
+.maler__desc {
+  color: #6c757d;
+}
+
+.maler h3.maler__title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.maler-left {
+  overflow: hidden;
+}
+
+.maler-left .maler__image {
+  float: left;
+  margin-right: 20px;
+}
+
+.maler-left .maler__content {
+  overflow: hidden;
+}
+
+.maler--center {
+  text-align: center;
+}
+
+.section-promo {
+  background-color: #585858;
 }
 
 label {
@@ -548,6 +758,10 @@ iframe.wrapper {
 }
 
 /* ============ TYPOGRAPHY ============ */
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .page-header h2 {
   margin-top: 0;
 }
