--- a/templates/jsn_blank2/scss/custom/_customvariables.scss
+++ b/templates/jsn_blank2/scss/custom/_customvariables.scss
@@ -18,6 +18,20 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$black:    #000 !default;
+
+
+
 // $brand-primary:         #009aca !default;
 // $brand-success:         #5cb85c !default;
 // $brand-info:            #5bc0de !default;
@@ -46,6 +60,11 @@ $link-color:            $brand-primary !default;
 $link-hover-color:      $primary-color !default;
 //** Link hover decoration.
 $link-hover-decoration: none !default;
+
+$yiq-text-dark:             $gray-900 !default;
+$yiq-text-light:            $white !default;
+
+$yiq-contrasted-threshold:  150 !default;
 
 
 //== Typography
