--- a/templates/jsn_blank2/scss/custom/_button.scss
+++ b/templates/jsn_blank2/scss/custom/_button.scss
@@ -105,6 +105,7 @@
     color: $gray-900 !important;
     background: none !important;
     /* khong co padding left and right */
+    padding: 0 !important;
 
     &:hover,
     &:focus,
