--- a/templates/jsn_blank2/scss/custom/_custom.scss
+++ b/templates/jsn_blank2/scss/custom/_custom.scss
@@ -83,5 +83,8 @@ $padding-large-horizontal:  56px ;
 $btn-font-weight: bold;
 $btn-default-color:              #fff ;
 $btn-text-transform: uppercase;
+$padding-plain-vertical : 0;
+$padding-plain-horizontal :0;
+$counter-color : #64bb21;
 
 
